--- a/attendance/templates/subject/HourList.html
+++ b/attendance/templates/subject/HourList.html
@@ -47,7 +47,7 @@
 </article>
 <section class="ml-md-4 d-flex justify-content-center justify-content-md-start">
 	<a href="{% url 'subject:create_hour' class_obj.id %}"
-		class="btn border_white btn-cust neu_icon text-success align-self-center">Create&nbsp;Hour</a>
+		class="btn border_white btn-cust neu_icon text-success align-self-center">Create&nbsp;Subject</a>
 </section>
 
 {% endblock %}
