--- a/attendance/templates/attendancess/check_attendance.html
+++ b/attendance/templates/attendancess/check_attendance.html
@@ -35,6 +35,21 @@
         Hour : {{ hour_number }}
     </h5>
 </section>
+<section class="ml-4 pl-md-4 d-flex flex-column flex-md-row pt-md-2">
+    <h5 class="capitalize text-muted text-muted d-flex justify-content-center justify-content-md-start">
+        Total No. of Students : {{ total }}
+    </h5>
+</section>
+<section class="ml-4 pl-md-4 d-flex flex-column flex-md-row pt-md-2">
+    <h5 class="capitalize text-muted text-muted d-flex justify-content-center justify-content-md-start">
+        Total No. of Present : {{ present }}
+    </h5>
+</section>
+<section class="ml-4 pl-md-4 d-flex flex-column flex-md-row pt-md-2">
+    <h5 class="capitalize text-muted text-muted d-flex justify-content-center justify-content-md-start">
+        Total No. of Absent : {{ absent }}
+    </h5>
+</section>
 <section class="container px-0 px-md-5 mx-auto d-flex d-md-block justify-content-center">
     <div class="table-responsive table_wrapper table_box_shadow border_white my-3" id="tab_res">
         <table class="table table-striped my-1 my-md-2">
